samples/_failures_safe/1761006391_e15ef2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cde04877.c:131: error: expected ‘;’, ‘,’ or ‘)’ at end of input
